Tres ejercicios: listas, noticia y tablas (actualizados)

--- a/Ejercicios-HTML/ej_noticia.html
+++ b/Ejercicios-HTML/ej_noticia.html
@@ -12,7 +12,9 @@
 Diario On-line TN NOTICIAS <img src="imagenes/1200px-TN_todo_noticias_logo.svg.png" height="60" width="100">
 
 </header>
-
+<nav>
+    <a href="ej_listas.html">Recetas</a>
+</nav>
 <section>
     <h3>
     <strong>CordoBici</strong>
