--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Ejercicio Formulario</title>
@@ -18,26 +18,74 @@
     https://www.w3schools.com/html/tryit.asp?filename=tryhtml_elem_output-->
 
 <h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
-Nombre:
-Apellido:
-Sexo: Masculino Femenino
-Edad:
-Email:
-Usuario:
-Password:
-Confirmar Password:
+<img src="imagenes/registrate.png" height="131" width="383"/>
+<form>
+    <p>
+Nombre: <input type="text" name="nombre">
+    </p>
+    <p>
+    Apellido:<input type="text" name="apellido">
+    </p>
+    <p>
+    Sexo:
+        <br>
+        Masculino <input type="radio" value="masculino" name="genero">
+        </br>
+        <br>
+        Femenino<input type="radio" value="femenino" name="genero">
+        </br>
+        <br>
+        No binario <input type="radio" value="No binario" name="genero">
+        </br>
+        <br>
+        Prefiero no revelarlo <input type="radio" value="noRev" name="genero">
+        </br>
+    </p>
+    <p>
 
-Tipo de servicio: Free / Standard / Premium
-Tema:
-Política
-Negocios
-Tecnología
-Salud
+    Edad:<input type="number" name="edad">
+    </p>
+    <p>
 
+    Email: <input type="email" name="email">
+    </p>
+    <p>
+
+    Usuario: <input type="text" name="usuario">
+    </p>
+    <p>
+
+    Password: <input type="password" name="password">
+    </p>
+    <p>
+
+    Confirmar Password: <input type="password" name="password2">
+    </p>
+    <p>
+    Tipo de servicio:
+        <select name="tipo_servicio">
+        <option value="Free" >Free</option>
+            <option value="Standard"> Standard</option>
+            <option value="Premium">Premium</option>
+        </select>
+    </p>
+    <p>
+    Tema:
+    Política <input type="checkbox" name="tema" value="politica">
+    Negocios<input type="checkbox" name="tema" value="negocios">
+    Tecnología<input type="checkbox" name="tema" value="tecnologia">
+    Salud<input type="checkbox" name="tema" value="salud">
+    </p>
+    <p>
 Agregue un comentario:
+        <textarea></textarea>
+    </p>
+    <p>
+        <button>
+Enviar
+        </button>
+    </p>
 
-Boton de Enviar
-
-
+</form>
 </body>
 </html>
