--- a/Ejercicios-HTML/ej_animales.html
+++ b/Ejercicios-HTML/ej_animales.html
@@ -19,6 +19,10 @@
     <p>
         El caballo emite el siguiente sonido:
         <!--Insertar audio de la carpeta resources-->
+        <audio src="resources/horse.ogg" controls>
+Tu navegador no implementa el elemento audio
+
+        </audio>
     </p>
 </div>
 
@@ -35,6 +39,9 @@
     <p>
         En Alaska, cuando el salmón remonta el río para el desove estival, los osos pueden reunirse para pescar.
         <!--Insertar Video de osos pescando ubicado en la carpeta de resources-->
+        <video src="resources/movie.mp4" controls>
+
+        </video>
     </p>
 </div>
 <div>
@@ -47,6 +54,12 @@
         siendo de esta manera el félido vivo mas grande después de su pariente el Tigre.
     </p>
     <!--Insertar video de youtube sobre leones-->
+</div>
+<div>
+    <h2>EL PERRO LIMON</h2>
+    <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/NhKVUFVCjnA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </p>
 </div>
 </body>
 </html>
