--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -3,6 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Ejercicio Columnas</title>
+    <style>
+
+        #tituloPrincipal{color: midnightblue;}   /* por id */
+
+        .tituloNoticia{font-size: 30px;}         /* por class */
+
+        body{font-family: 'Century Gothic';}     /* por tag */
+
+        a:link{
+            color: crimson;     /*color del link sin visitar */
+        }
+
+        a:visited{
+            color: crimson;     /*color del link visitado */
+        }
+
+        a:hover{
+            font-size: 25px;   /* que pasa cuando pasamos el mouse por arriba */
+        }
+
+        a:active{
+            font-weight: bolder;         /* cuando le hacemos click */
+        }
+
+    </style>
 </head>
 <body>
 <!--Cree los estilos CSS necesarios para que el texto se visualice en 2 columnas-->
@@ -11,7 +36,7 @@
 </header>
 <a href="ej_leyes.html" target="_blank">Legal</a>
 <section>
-    <h3 class="tituloNoticia">CordoBici</h3>
+    <h3 class="tituloNoticia" >CordoBici</h3>
     Publicado el 07/03/2018 en Agropecuarias y Ambiente
     <article>
         <div>
