--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -2,41 +2,50 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>CV Nombre Apellido</title>
+    <title>CV Bautista Juncos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+
+    <link rel="shortcut icon" href="imagenes/cv.png">
+
+    <link rel="stylesheet" href="estiloCV.css" type="text/css">
+
 </head>
 <body>
 
-<div>
-    <h1>Nombre Alumno</h1>
-    <h2>Ing. en Computacion</h2>
+<div id="principal">
+    <img id="cv" src="imagenes/cv.png">
+    <h1 class="tituloPrincipal">Bautista Juncos</h1>
+    <h2>Ing. en Sistemas</h2>
 </div>
 
 <div>
     <h3>Datos Personales</h3>
-    <p><span>Fecha de Nacimiento:</span> dd/mm/aaaa</p>
-    <p><span>Email:</span> email@email.com</p>
+    <p><span>Fecha de Nacimiento:</span> 12 / 05 / 2004</p>
+    <p><span>Email:</span> baujuncos@gmail.com</p>
 </div>
 
 <div>
-    <h3>Formacion Academica</h3>
-    <p><span>Carrera:</span> Ingeniería XXXXX</p>
+    <h3>Formacion Academica actual en proceso</h3>
+    <p><span>Carrera:</span> Ingeniería en Sistemas</p>
     <p><span>Universidad:</span> Universidad Católica de Córdoba</p>
-    <p><span>Año de Ingreso:</span> 2018</p>
+    <p><span>Año de Ingreso:</span> 2022</p>
 </div>
 
 <div>
-    <h3>Cursos</h3>
+    <h3>Cursos y formación académica previa</h3>
 
     <div>
-        <h4>Nombre Curso 1</h4>
-        <p><span>Lugar:</span> Nombre Institución</p>
-        <p><span>Año:</span> XXXX </p>
+        <h4>Secundario</h4>
+        <p><span>Lugar:</span> Colegio Gabriel Taborin</p>
+        <p><span>Año (finalización):</span> 2021 </p>
     </div>
 
     <div>
-        <h4>Nombre Curso 2</h4>
-        <p><span>Lugar:</span> Nombre Institución</p>
-        <p><span>Año:</span> XXXX </p>
+        <h4>Inglés</h4>
+        <p><span>Lugar:</span> Skills English Institute</p>
+        <p><span>Año:</span> 2020 </p>
     </div>
 </div>
 
