--- a/Ejercicios-CSS/ej_leyes.html
+++ b/Ejercicios-CSS/ej_leyes.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Ley 10.208 - Política Ambiental Provincial</title>
+
+    <link rel="shortcut icon" href="Ejercicios-CSS/imagenes/70888.png" type="image/x-icon">
+
+    <style>
+
+        .titulo li{list-style-type: upper-roman;
+                   font-size: 25px;                  /* o 2em */
+        }
+
+        .subitems li {list-style-type: lower-alpha}
+
+    </style>
+
 </head>
 <body>
 <h1>La Legislatura de la Provincia de Córdoba</h1>
