Ejercicios terminados y completos de Javascript y detalles en CSS

--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -5,7 +5,11 @@
     <title>Ejercicio Columnas</title>
     <style>
 
-        #tituloPrincipal{color: midnightblue;}   /* por id */
+        #tituloPrincipal{       /* por id */
+            font-size: 60px;
+            color: midnightblue;
+            margin: 3px 7px;
+        }
 
         .tituloNoticia{font-size: 30px;}         /* por class */
 
@@ -27,6 +31,25 @@
             font-weight: bolder;         /* cuando le hacemos click */
         }
 
+        h1{text-shadow: #7a8aac 2px 3px}
+
+        article{
+            column-count: 2;
+            column-gap: 100px;
+            margin: 0 30px;
+        }
+
+        a{
+            background-color: #7a8aac;
+            padding: 10px;
+        }
+
+        a:hover{
+            background-color: black;
+            -webkit-transition: background-color 1s linear;
+            transition: background-color 1s linear;
+        }
+
     </style>
 </head>
 <body>
@@ -39,7 +62,7 @@
     <h3 class="tituloNoticia" >CordoBici</h3>
     Publicado el 07/03/2018 en Agropecuarias y Ambiente
     <article>
-        <div>
+        <div class="columna1">
             <p>
                 Un intercambio académico inspiró a Joaquín, Nicolás, Guido y Facundo para elegir el tema de su trabajo final.
                 Dos de ellos estuvieron el año pasado en Sevilla y se quedaron "enamorados" –palabras textuales- de su
@@ -69,7 +92,7 @@
                 de la tesis.
             </p>
         </div>
-        <div class="grid-item">
+        <div class="columna2">
             <p>
                 Gracias a una profunda investigación comercial, sumada a una simulación realizada por un programa llamado
                 anylogic, consiguieron localizar de manera estratégica 19 estaciones con 280 bicicletas, en Nueva Córdoba y
