--- a/Ejercicios-JavaScript/segundaWeb.html
+++ b/Ejercicios-JavaScript/segundaWeb.html
@@ -7,9 +7,9 @@
     <link href="miEstilo.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="misFunciones.js"></script>
 </head>
-<body class="body-num">
+<body class="body-num" onload="cargarResultado()">
 
-<div class="centrado div-conver">
+<div class="centrado div-conver" onload="cargarResultado()">
     <h1>Conversor de Unidades</h1>
     <form>
         <p>
